fix floatertext spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@
 	background-color: black;
 	position: fixed;
 	z-index: 10;
-	display:none;
+	display: none;
 }
 
 .navbar-link {
@@ -26,12 +26,12 @@
 	font-weight: 300;
 	display: inline-block;
 	text-align: center;
-	margin-top: 5px
+	margin-top: 5px;
 }
 
 #navbar-items {
+	text-align: center;
 	display: none;
-	text-align: center
 }
 
 #navbar-items a:link {
@@ -207,6 +207,7 @@ a:active {
 	padding: 0 0 0 0;
     display: block;
     width: 100%;
+    line-height: 1;
 }
 
 
@@ -220,6 +221,7 @@ a:active {
 	display: block;
     width: 100%;
     font-family: 'Raleway', sans-serif;
+    line-height: 1
 
 }
 
